tui_rog_game/error
~/w/CppPlayground/build main ⇡4 !66 ❯ make                                                             jwlee@minipc
[ 19%] Built target leveldb
[ 23%] Built target spdlog
[ 28%] Built target domain_model
[ 34%] Built target domain_event
[ 35%] Built target port_in
[ 35%] Built target port_out
[ 39%] Built target screen
[ 59%] Built target dom
[ 71%] Built target component
[ 72%] Built target adapter_in_tui
[ 73%] Built target inmemory_adapter
[ 74%] Built target leveldb_provider
[ 75%] Built target common_lib
[ 78%] Built target leveldb_adapter
[ 79%] Built target description_adapter
[ 80%] Built target domain_service
[ 81%] Building CXX object assembly/CMakeFiles/assembly.dir/src/ApplicationBuilder.cc.o
/home/jwlee/workspace/CppPlayground/tui_rog_game/assembly/src/ApplicationBuilder.cc: In static member function ‘static std::unique_ptr<TuiRogGame::Adapter::In::Tui::TuiAdapter> TuiRogGame::Assembly::ApplicationBuilder::build(ftxui::ScreenInteractive&)’:
/home/jwlee/workspace/CppPlayground/tui_rog_game/assembly/src/ApplicationBuilder.cc:25:51: error: ‘InMemoryAdapter’ is not a member of ‘TuiRogGame::Adapter::Out::Persistence’
   25 |       std::make_shared<Adapter::Out::Persistence::InMemoryAdapter>();
      |                                                   ^~~~~~~~~~~~~~~
/home/jwlee/workspace/CppPlayground/tui_rog_game/assembly/src/ApplicationBuilder.cc:25:67: error: no matching function for call to ‘make_shared<<expression error> >()’
   25 |       std::make_shared<Adapter::Out::Persistence::InMemoryAdapter>();
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~
In file included from /usr/include/c++/13/memory:80,
                 from /home/jwlee/workspace/CppPlayground/tui_rog_game/application/domain/event/include/DomainEvent.h:3,
                 from /home/jwlee/workspace/CppPlayground/tui_rog_game/adapter/in/tui/include/TuiAdapter.h:3,
                 from /home/jwlee/workspace/CppPlayground/tui_rog_game/assembly/include/ApplicationBuilder.h:3,
                 from /home/jwlee/workspace/CppPlayground/tui_rog_game/assembly/src/ApplicationBuilder.cc:1:
/usr/include/c++/13/bits/shared_ptr.h:1005:5: note: candidate: ‘template<class _Tp, class ... _Args> std::shared_ptr<typename std::enable_if<(! std::is_array< <template-parameter-1-1> >::value), _Tp>::type> std::make_shared(_Args&& ...)’
 1005 |     make_shared(_Args&&... __args)
      |     ^~~~~~~~~~~
/usr/include/c++/13/bits/shared_ptr.h:1005:5: note:   template argument deduction/substitution failed:
/home/jwlee/workspace/CppPlayground/tui_rog_game/assembly/src/ApplicationBuilder.cc:25:67: error: template argument 1 is invalid
   25 |       std::make_shared<Adapter::Out::Persistence::InMemoryAdapter>();
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~
make[2]: *** [assembly/CMakeFiles/assembly.dir/build.make:76: assembly/CMakeFiles/assembly.dir/src/ApplicationBuilder.cc.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:1115: assembly/CMakeFiles/assembly.dir/all] Error 2
make: *** [Makefile:156: all] Error 2

